# autoevo-agent

./: .gitignore  Dockerfile.base  README.md  TODO.md  __init__.py  agent.py  benchmark-info.md  plot_progress.py  program.md  pyproject.toml  requirements.txt  run_eval.sh
.agent/: notes.md
config/: livesweagent.yaml
tasks/example-task/: instruction.md  task.toml
tasks/example-task/environment/: Dockerfile
tasks/example-task/files/: app.py  test_app.py
tasks/example-task/tests/: test.sh
