[project]
name = "autoevo-agent"
version = "0.1.0"
description = "Automating the automation of automation"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.0.0",
    "harbor>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]
